--- a/app.css
+++ b/app.css
@@ -1,4 +1,33 @@
-.test {
-  background-color: red;
-  border-top: 1px solid black;
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  border-bottom: 10px solid black;
 }
+
+.past {
+  background-color: #d3d3d3;
+  color: white;
+}
+
+.present {
+  background-color: #ff6961;
+  color: white;
+}
+.future {
+  background-color: #77dd77;
+  color: white;
+}
+
+.form-control {
+  margin-bottom: 2px;
+  /* color: black; */
+  /* border-top: 1px dashed black; */
+}
+
+/* .row {
+  white-space: pre-wrap;
+  height: 80px;
+  border-top: 1px solid white;
+} */
