--- a/app.css
+++ b/app.css
@@ -26,7 +26,24 @@
   /* border-top: 1px dashed black; */
 }
 
-/* .row {
+.saveBtn {
+  border-left: 1px solid black;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #06aed5;
+  color: white;
+}
+
+.saveBtn i:hover {
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+}
+.input-group,
+.input-group-prepend {
+  height: 80px;
+}
+
+/* .field {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
